2003-06-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPasteboard.m: Documented all methods, fixed minor bugs
	writing fiels to pastebaords, implemented ([+typesFilterableTo:])
	wrote (partial implementation ...) the unimplemented filters stuff.
	* Source/GSServicesManager.m: helpers for filters.
	* Headers/AppKit/GSPasteboard.h: Removed unused methods.

2003-06-26  Ludovic Marcotte <ludovic@Sophos.ca>

	* Fixed the transparency of Images/common_ret.tiff
	* Source/NSOutlineView (-setDataSource:) Modified to allow
	  a nil data source.

2003-06-26  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/gui/GSLayoutManager.h
	Changed ivars cached_pos and cached_cpos to unsigned.
	* Headers/gnustep/gui/GSLayoutManager_internal.h
	Changed element char_offset of structure glyph_t to unsigned.
	* Source/GSLayoutManager.m (_glyphDumpRuns,
	helpers::generateRunsToCharacter:,
	helpers::generateGlyphsUpToCharacter:,
	helpers::generateGlyphsUpToGlyph:,
	helpers::glyphForCharacter:index:positions::, getGlyphs:range:,
	characterRangeForGlyphRange:actualGlyphRange:,
	glyphRangeForCharacterRange:actualCharacterRange:,
	invalidateGlyphsForCharacterRange:changeInLength:actualCharacterRange:, 
	insertTextContainer:atIndex:):
	Removed compiler warning about signed/unsigned comparision. 

2003-06-25  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m (initWithPasteboard:):
	* Source/NSView.m (dragFile:fromRect:slideBack:event:):
	Corrected handling of pasteboard data of type NSFilenamesPboardType.
 
2003-06-24 01:05  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTabViewItem.m (-drawLabel:inRect:): Update for change
	in the behavior of -drawAtPoint:. Use -drawInRect: instead.

2003-06-23 19:03  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSStringDrawing.m (-drawAtPoint:): Place the text correctly
	when the view isn't flipped.

2003-06-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPanel.m
	Commented out unused variables WTitleHeight, ScrollMinSize,